# NikiScriptCS

./: CMakeLists.txt  NikiScriptCSharp.sln  NikiScriptWrapper.cs  Program.cs  TODO.md
Example/cfg/: comments.cfg  manual_loop.cfg  references.cfg  semicolon.cfg  variables.cfg
Example/src/: example.cpp
NikiScript/: BaseWrapper.cpp  BaseWrapper.h  Command.cpp  Command.h  CommandHandler.cpp  CommandHandler.h  CommandHandlerWrapper.cpp  CommandHandlerWrapper.h  CommandWrapper.cpp  CommandWrapper.h  Context.cpp  Context.h  DLLExport.h  Lexer.cpp  Lexer.h  NikiScript.cpp  NikiScript.h  NikiScriptCWrapper.cpp  NikiScriptCWrapper.h  Parser.cpp  Parser.h  PrintCallback.cpp  PrintCallback.h  PrintCallbackWrapper.cpp  PrintCallbackWrapper.h  ProgramVariable.cpp  ProgramVariable.h  ProgramVariableWrapper.cpp  ProgramVariableWrapper.h  Token.cpp  Token.h  TokenWrapper.cpp  TokenWrapper.h  Utils.cpp  Utils.h
NikiScriptCS/: Base.cs  Command.cs  CommandHandler.cs  PrintCallback.cs  ProgramVariable.cs  Token.cs  Utils.cs
